fix: add overflow hidden on canvas

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -41,7 +41,6 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    z-index: 10;
     margin: 0;
     display: flex;
     flex-direction: column;
